# env_perceiver

./: CMakeLists.txt  README.md  e  package.xml
Docker/: Dockerfile
config/: env_perceiver_params.yaml
include/ros2_obstacle_detection_on_occupancy_map/: ros2_obstacle_detection_on_occupancy_map.hpp  ros2_obstacle_detection_on_occupancy_map_node.hpp  visibility_control.hpp
launch/: env_perceiver_launch.py  ros2_obstacle_detection_on_occupancy_map.launch.py
src/: EnvPerceiver.cpp  OccupancyMapUpdater.cpp  ros2_obstacle_detection_on_occupancy_map.cpp  ros2_obstacle_detection_on_occupancy_map_node.cpp
test/: test_ros2_obstacle_detection_on_occupancy_map.cpp
utilities/: run_container_linux.sh
