<?xml version="1.0"?>
<package format="2">
  <name>env_perceiver</name>
  <version>0.0.0</version>
  <description>ROS 2 package for updating occupancy map using LiDAR data</description>
  <maintainer email="kacper@gmail.com">kacper</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
